# uc-remote-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/uc_remote_mcp/: config.py  server.py
src/uc_remote_mcp/client/: rest.py
src/uc_remote_mcp/safety/: backup.py  dry_run.py  validate.py
src/uc_remote_mcp/tools/: _common.py  activities.py  backup.py  buttons.py  devices.py  discovery.py  mutations.py  restore.py  setup.py  ui.py  ui_mutations.py
tests/: conftest.py  test_discovery.py  test_restore.py  test_validate.py
tests/fixtures/: activity_detail.json
