[project]
name = "uc-remote-mcp"
version = "0.1.0"
description = "MCP server for Unfolded Circle Remote 3 / Remote Two"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "websockets>=16.0",
    "zeroconf>=0.149.16",
]

[project.scripts]
uc-remote-mcp = "uc_remote_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uc_remote_mcp"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
